# health-care-planning

./: .gitignore  Dockerfile  README.md  domain.pddl  problem_1.pddl
problem_1/: OLD_domain.pddl  TODO_test_connections.pddl  domain.pddl  p1.pddl  p1.plan  p2.pddl  p2.plan  p2_simple.pddl  p2_simple.plan  p3.pddl  p3.plan  p3_simple_multiple.pddl  p3_simple_multiple.plan  problem_1.pddl
problem_1/old/: domain.pddl  domain_no_axiom.pddl
problem_2/: domain.pddl  p1.pddl  p1.plan  p2.pddl  p2.plan  p2_simple.pddl  p2_simple.plan  p3.pddl  p3.plan  p4.pddl  p4.plan
problem_2/old/: OLDdomain.pddl  domain.pddl  domain_fluents.pddl
problem_3/: domain.hddl  p1.hddl  p1.plan.out  p1.plan.txt  p3.hddl  p3.plan.out
problem_4/: domain.pddl  p1.pddl  p1.plan  p2_simple.pddl  p2_simple.plan
problem_4/old/: domain.pddl
problem_5/plansys2_problem_5/: CMakeLists.txt  package.xml  terminal1.sh  terminal1.txt  terminal2.txt
problem_5/plansys2_problem_5/launch/: commands  plansys2_problem_5_launch.py
problem_5/plansys2_problem_5/pddl/: domain.pddl
problem_5/plansys2_problem_5/src/: deliver_patient_action_node.cpp  deliver_supply_action_node.cpp  drop_off_patient_action_node.cpp  fill_box_action_node.cpp  load_first_box_action_node.cpp  load_second_box_action_node.cpp  load_third_box_action_node.cpp  move_carrier_one_box_action_node.cpp  move_carrier_three_box_action_node.cpp  move_carrier_two_box_action_node.cpp  move_empty_carrier_action_node.cpp  move_empty_robot_patient_action_node.cpp  move_robot_with_patient_action_node.cpp  pick_up_patient_action_node.cpp  unload_from_three_action_node.cpp  unload_one_box_action_node.cpp  unload_two_box_action_node.cpp
